[project]
name = "ledgerctrl"
authors = [
    { name = "simon muturi ", email = "simomutu8@gmail.com"}
]
description = "an app that has mobile app apis for the user to login like a driver and also a sales people"
requires-python = ">=3.10"
readme = "README.md"
dynamic = ["version"]
dependencies = [
    # "frappe~=15.0.0" # Installed and managed by bench.
]

[build-system]
requires = ["flit_core >=3.4,<4"]
build-backend = "flit_core.buildapi"

# These dependencies are only installed when developer mode is enabled
[tool.bench.dev-dependencies]
# package_name = "~=1.1.0"
